# docs/swagger.json
@@ -31,7 +31,7 @@
                 "summary": "\"用户登录\"",
                 "parameters": [
                     {
-                        "description": "用户信息",
+                        "description": "id 学号 password 密码进行base64加密后的字符串",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -48,7 +48,7 @@
                         }
                     },
                     "401": {
-                        "description": "msg\":\"error happened\"}",
+                        "description": "msg\":\"unauthorization\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -281,8 +281,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "原因，多个reason以逗号隔开",
-                        "name": "reason",
+                        "description": "原因 只需上传用户勾选的个数 内容不需要",
+                        "name": "reasonNum",
                         "in": "formData",
                         "required": true
                     }
